align expand button by removing fixed button height

--- a/src/modules/transaction/components/TransactionDetailRow/TransactionDetailRow.css
+++ b/src/modules/transaction/components/TransactionDetailRow/TransactionDetailRow.css
@@ -67,6 +67,7 @@
 .expandToggle {
   --content-font: 'basier-circle';
 
+  height: initial !important;
   padding-left: 0px !important;
   max-width: fit-content !important;
   min-width: fit-content !important;
